--- a/.github/workflows/Api-Tests-CI.yml
+++ b/.github/workflows/Api-Tests-CI.yml
@@ -1,7 +1,7 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Api-tests
+
+env:
+  SECRET_PASSWORD: $({ secrets.SECRET_GITHUB_PASSWORD })
 
 on:
   push:
@@ -17,7 +17,6 @@ jobs:
     strategy:
       matrix:
         node-version: [22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v4
@@ -27,5 +26,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run build --if-present
     - run: npm test
