--- a/.github/workflows/Api-Tests-CI.yml
+++ b/.github/workflows/Api-Tests-CI.yml
@@ -28,3 +28,9 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm test
+    - name: Upload test report
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: mochawesome-report
+        path: mochewsome-report/
