--- a/.github/workflows/Api-Tests-CI.yml
+++ b/.github/workflows/Api-Tests-CI.yml
@@ -6,11 +6,11 @@ env:
 
 on:
   schedule:
-    - cron: '*/2 * * * *'
-  # push:
-  #   branches: [ "master" ]
-  # pull_request:
-  #   branches: [ "master" ]
+    - cron: '30 13 * * *'
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 jobs:
   build:
